--- a/index.html
+++ b/index.html
@@ -116,5 +116,9 @@
        <a class="button-two" href="#">Connect</a>
         </div>
     </section>
+
+<section id="skill-section">
+
+</section>
 </body>
 </html>
